[tool.poetry]
name = "pygments-gravy"
version = "0.1.0"
description = "personal Pygments style"
authors = ["Dylan Yang <dylany360@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins]

[tool.poetry.plugins."pygments.styles"]
"gravy" = "pygments_gravy.gravy:GravyStyle"
